--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@nuxt/icon": "^1.13.0",
     "@nuxt/image": "^1.10.0",
     "@nuxt/scripts": "^0.11.7",
-    "@nuxt/test-utils": "^3.19.0",
+    "@nuxt/test-utils": "^3.19.1",
+    "@nuxt/ui": "^3.1.3",
     "@unhead/vue": "^2.0.9",
     "eslint": "^9.27.0",
     "nuxt": "^3.17.4",
