--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "nuxt-app",
   "private": true,
   "type": "module",
+  "watch": {
+    "test": "{src,test}/*.js"
+  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "watch": "npm-watch"
   },
   "dependencies": {
     "@nuxt/content": "^3.5.1",
@@ -19,9 +23,14 @@
     "@nuxt/test-utils": "^3.19.1",
     "@nuxt/ui": "^3.1.3",
     "@unhead/vue": "^2.0.9",
+    "better-sqlite3": "^11.10.0",
     "eslint": "^9.27.0",
+    "npm-watch": "^0.13.0",
     "nuxt": "^3.17.4",
     "vue": "^3.5.14",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "sass": "^1.89.2"
   }
 }
