--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "{src,test}/*.js"
   },
   "scripts": {
-    "build": "NUXT_APP_BASE_URL=/portfolio-nuxt/ nuxt build --preset github_pages",
+    "build": "NUXT_APP_BASE_URL=https://paulbarrett79.github.io/portfolio-nuxt/ nuxt build --preset github_pages",
     "dev": "nuxt dev --dotenv .env.local",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
