--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "test": "{src,test}/*.js"
   },
   "scripts": {
-    "build": "NUXT_APP_BASE_URL=https://paulbarrett79.github.io/portfolio-nuxt/ nuxt build --preset github_pages",
-    "dev": "nuxt dev --dotenv .env.local",
+    "build": "nuxt build",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
